--- a/template/package.json
+++ b/template/package.json
@@ -10,20 +10,28 @@
   "keywords": [
     "scroll"
   ],
-  {{#test}}
+  ""
+  
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.13",
+	"babel-core": "^6.22.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
+	{{#test}}
+    "@vue/test-utils": "^1.0.0-beta.13",
     "jest": "^21.2.1",
     "jest-vue-preprocessor": "^1.4.0",
+	{{/test}}
     "regenerator-runtime": "^0.11.0",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.4.4",
     "vue-template-es2015-compiler": "^1.6.0"
   },
-  {{/test}}
   "author": "{{author}}",
   "license": "ISC",
   {{#test}}
